--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -2,6 +2,7 @@ $color-awax-gold:#B88B58;
 $color-background-black:rgb(0, 0, 0);
 $color-letters-white:rgb(255, 255, 255);
 $color-letters-gray:rgb(174, 174, 174);
+$color-background-gray:rgb(237, 237, 237);
 
 
 
