--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -4,7 +4,7 @@
     padding-bottom: 60px;
 
 
-    .services_content {
+    .services_title {
         color: $color-letters-white;
         text-align: center;
         text-transform: uppercase;
