--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,7 @@
 @import "components/about";
 @import "components/services";
 @import "components/projects";
+@import "components/team";
+@import "components/clients";
+@import "components/logos";
+@import "components/price";
