--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,5 +1,5 @@
 .projects {
-    height: 80vh;
+    padding-bottom: 70px;
 
     .projects_content {
         color: $color-background-black;
@@ -10,7 +10,6 @@
         h2 {
             font-size: 28px;
             margin-bottom: 10px;
-
         }
 
         h5 {
@@ -20,6 +19,7 @@
 
     .menu_projects {
         margin-top: 50px;
+        margin-bottom: 30px;
 
         ul {
             display: flex;
@@ -50,10 +50,13 @@
                     top: 94%;
                     left: 23%;
                     transform: scale(0);
+                    transition: .5s;
+                }
+
+                &:hover :before {
+                    transform: scale(1);
                 }
             }
-
-
         }
 
         :nth-child(1) {
@@ -65,6 +68,67 @@
             border-top-right-radius: 40px;
             border-bottom-right-radius: 40px;
         }
+    }
+
+    .gallery_project {
+        figure {
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        .box {
+            position: relative;
+            cursor: pointer;
+
+
+            .layer {
+                position: absolute;
+                top: 0;
+                left: 0;
+                text-align: center;
+                background-color: rgba(0, 0, 0, 0.7);
+                width: 100%;
+                height: 0;
+                color: $color-letters-white;
+                transition: .8s;
+
+                h4 {
+                    text-transform: uppercase;
+                    margin-top: 50px;
+                    margin-bottom: 15px;
+                    font-weight: 500;
+                    opacity: 0;
+                    transition: .8s;
+                }
+
+                p {
+                    line-height: 1.5;
+                    opacity: 0;
+                    transition: .8s;
+                }
+
+
+
+            }
+
+            &:hover .layer {
+                height: 100%;
+            }
+
+            &:hover h4 {
+                opacity: 1;
+            }
+
+            &:hover p {
+                opacity: 1;
+            }
+        }
+    }
+
+    .btn_box {
+        text-align: center;
     }
 
 }
